2014-12-08  Darryl McClymont  <darryl.mcclymont@gmail.com>
	
	* FiltersToolbox/bwrmsmallcomp.m (0.1.2)

	- changed output from uint8 to logical

2014-12-05  Darryl McClymont  <darryl.mcclymont@gmail.com>

	* DiffusionMRIToolbox/global_reference_frame.m (0.1.2)

	- Now accepts hearts with orientations other than axial (extra argument)

	* matlab/DiffusionMRIToolbox/fit_DT.m: (0.1.4)

	- Added outputs for secondary and tertiary eigenvectors

2014-12-02  Darryl McClymont  <darryl.mcclymont@gmail.com>

	* Add DiffusionMRIToolbox/global_reference_frame.m (0.1.1)

	- Returns unit vectors for the global reference frame

	* FiltersToolbox/imagesc_nD.m (0.1.0)

	- minor. User can now supply an empty array for the ‘col’ variable

2014-12-02  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/ThirdPartyToolbox/tightfig.m: (0.1.0)

	- Remove excess margins from figures.

	- by Richard Crozier, 02 Dec 2011 (Updated 17 Dec 2012).

	- Downloaded from MatlabCentral

	http://uk.mathworks.com/matlabcentral/fileexchange/34055-tightfig

2014-12-01  Ramon Casero  <rcasero@gmail.com>

	* matlab/PointsToolbox/pts_pca.m: (1.1.1)

	- Small changes.

	- Update syntax of functions that check number of input/output
	arguments.

	- Remove trailing and following whitespaces in brackets.

2014-11-30  Ramon Casero  <rcasero@gmail.com>

	* CMakeLists.txt: (0.9.4)

	- I had forgotten to uncomment adding the matlab directory, so the
	Matlab files were not being built.

	* CMakeLists.txt: (0.9.3)

	- Fix bug. Add explicit check for OpenGL, because CGAL_ImageIO
	depends on OpenGL to build. Before this fix, if OpenGL was not in
	the system (e.g. libgl1-mesa-dev for Ubuntu), the build would fail
	without a clear message indicating what the problem was.

	* matlab/ManifoldToolbox/tri_sphparam.m: (0.5.0)

	- Change function interface. Remove input argument X, it's
	unnecessary and creates confusion with initial guess Y0. Now first
	argument is the method, then the distance matrix, then the sphere
	radius.
